fixed overflow on FHD

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
   font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 500;
+  overflow-x: hidden;
 
   background-color: #222831;
 }
